Fix #6 misaligned blog timestamp

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,7 @@ iframe{
 	{
 		font-size: 0.85em;
 		color: #a1aaa5;
+                margin-left: 0em;
 	}
 	
 		ul.meta li
